<resources>
    <string name="app_name">Foodies</string>
    <string name="vendor_list_button">View Vendors</string>
    <string name="sign_out">sign out</string>
    <string name="your_account_details">Your Account Details</string>
    <string name="pfp_description">change profile picture</string>
    <string name="name">Name:</string>
    <string name="users_name">User\'s Name</string>
    <string name="email_address">E-mail address:</string>
    <string name="users_email">User\'s e-mail</string>
    <string name="review_history">Review history:</string>
    <string name="users_review_history">user\'s review history</string>
    <string name="login">Log in</string>
    <string name="hint_email">UCT Email</string>
    <string name="hint_password">Password</string>
    <string name="cancel">cancel</string>
    <string name="register_link_text">don\'t have an account? click here to register</string>
    <string name="continue_as_guest">continue as guest</string>
    <string name="your_account">your account</string>
    <string name="home_fragment">Home fragment</string>
    <string name="account">Account</string>
    <string name="manage">Manage</string>
    <string name="browse">Browse</string>
    <string name="home">Home</string>
    <string name="go_to_account">go to account</string>
    <string name="back_to_vendor_list">back to vendor list</string>
    <string name="campus_cafe">Campus Cafe</string>
    <string name="store_image">store image</string>
    <string name="vendor_list">Vendor List</string>
    <string name="menu">Menu</string>
    <string name="view_reviews">View Reviews</string>
    <string name="averagerating">AverageRating: 4.5</string>
    <string name="your_store">Your Store</string>
    <string name="rewards">Rewards</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">register</string>
    <string name="reviews">%1$s Reviews</string>
    <string name="currently_no_menu_to_display">Currently no menu to display</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>