<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/vendorListFragment"
        android:icon="@drawable/vendorlist"
        android:title="@string/vendor_list" />
    <item
        android:id="@+id/browseFragment"
        android:icon="@drawable/browse"
        android:title="@string/browse" />
    <item
        android:id="@+id/rewardsFragment"
        android:icon="@drawable/reward"
        android:title="@string/rewards"/>
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/account_icon"
        android:title="@string/account" />
    <item
        android:id="@+id/managementFragment"
        android:icon="@drawable/manage_icon"
        android:title="@string/manage"/>

</menu>