<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <Button
        android:id="@+id/sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/accLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/your_account_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/pfp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accLabel"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/pfp_description" />

    <TableLayout
        android:layout_width="381dp"
        android:layout_height="367dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pfp_button"
        app:layout_constraintVertical_bias="0.54">

        <TableRow>

            <TextView
                android:layout_width="74dp"
                android:layout_height="31dp"
                android:text="@string/name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="258dp"
                android:layout_height="match_parent"
                android:text="@string/users_name" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="124dp"
                android:layout_height="31dp"
                android:text="@string/email_address"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/users_email" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="124dp"
                android:layout_height="31dp"
                android:text="@string/review_history"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reviewTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/users_review_history" />
        </TableRow>

    </TableLayout>



</androidx.constraintlayout.widget.ConstraintLayout>