<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <TextView
        android:id="@+id/accLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/your_account_details"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarImageView">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="Username"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/users_name" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/email_address"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/users_email" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="Phone number"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="users phone number" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/rewardRowTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="Reward point history"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rewardTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="users reward points" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/voucherRowTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="Active voucher code"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/voucherTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="currently no code to show" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/descriptionRowTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="Your store's description"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="description" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/signout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_out"
        android:textColor="@color/nicegreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <ImageButton
        android:id="@+id/edit_button"
        android:layout_width="59dp"
        android:layout_height="37dp"
        android:layout_marginStart="2dp"
        android:backgroundTint="@color/white"
        android:outlineAmbientShadowColor="@color/grey"
        android:scaleType="centerCrop"
        android:src="@drawable/edit"
        app:layout_constraintBottom_toBottomOf="@+id/accLabel"
        app:layout_constraintStart_toEndOf="@+id/accLabel"
        app:layout_constraintTop_toTopOf="@+id/accLabel"
        app:tint="@color/nicegreen" />

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="113dp"
        android:layout_height="98dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accLabel"
        app:srcCompat="@drawable/penguin" />


</androidx.constraintlayout.widget.ConstraintLayout>